# mira-oxide

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  alleles.json  coveragefig_sample_1_linear.json  coveragefig_sample_2_linear.json  coveragefig_sample_3_linear.json  coveragefig_sample_4_linear.json  dais_vars.json  docker-compose.yml  indels.json  irma_summary.json  nf_status_table.html  nf_status_table_progress.html  nt_sequences.json  pass_fail_qc.json  qc_statement.json  reads.json  ref_data.json  sample_chemistry.csv  vtype.json
.cargo/: config.toml
.github/workflows/: build-binaries.yml  dev.yml  release.yml
all_sample_hamming_dist/: Cargo.toml  README.md
all_sample_hamming_dist/src/: main.rs
all_sample_nt_diffs/: Cargo.toml  README.md
all_sample_nt_diffs/src/: main.rs
assests/package_readme_files/: mutations_of_interest_readme.md
check_chemistry/: Cargo.toml
check_chemistry/src/: main.rs
di_stats/: Cargo.toml  main
di_stats/src/: main.rs
docs/: color-palette.md  create_nextlfow_samplesheet_readme.md  di_stats_readme.md  find_chemistry_readme.md  hamming_distance_readme.md  mutations_of_interest_table_readme.md  nf_status_readme.md  nt_diffs_readme.md  positions_of_interest_readme.md  prepare_mira_reports.md  static_report_readme.md  summary_report_update.md  variants_of_interest_readme.md
flu_prepare_irma_json/: Cargo.toml
flu_prepare_irma_json/src/: main.rs
mutations_of_interest_table/: Cargo.toml  README.md  mutations_of_interest_table_readme.md
mutations_of_interest_table/src/: main.rs
nf_status/: Cargo.toml
nf_status/src/: main.rs
plots/: Cargo.toml
plots/src/: main.rs
src/: lib.rs  main.rs  web.rs
src/constants/: heatmap_ref.rs  mod.rs  protein_map.rs
src/io/: coverage_json_per_sample.rs  coverage_to_heatmap.rs  create_passfail_heatmap.rs  create_statichtml.rs  data_ingest.rs  mod.rs  reads_to_piechart.rs  reads_to_sankey_json.rs  write_csv_files.rs  write_fasta_files.rs  write_json_files.rs  write_parquet_files.rs
src/processes/: all_sample_hd.rs  all_sample_nt_diffs.rs  check_mira_version.rs  create_nextflow_samplesheet.rs  di_stats.rs  find_chemistry.rs  mod.rs  nf_status.rs  plotter.rs  positions_of_interest.rs  prepare_mira_reports.rs  samplesheet_check.rs  static_report.rs  summary_report_update.rs  variants_of_interest.rs
src/utils/: alignment.rs  data_ingest.rs  data_processing.rs  dataframes.rs  fastq_read.rs  mod.rs  plotting.rs  read_fastq.rs  writing_outputs.rs
variants_of_interest_table/: Cargo.toml  README.md
variants_of_interest_table/src/: main.rs
