[package]
name = "mira-oxide"
version = "1.1.1"
edition = "2024"
description = "A set of rusty tools for use in MIRA"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
either = "1"
flate2 = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3.2"
ordered-float = "5.0.0"
plotly = "0.13.5"
base64 = "0.22"

zoe = { version = "0.0.21", default-features = false, features = [
    "multiversion",
] }
chrono = "0.4.42"
regex = "1.11.2"

[profile.release]
strip = true
