[package]
name = "mira-oxide"
version = "1.5.2"
edition = "2024"
description = "A set of rusty tools for use in MIRA"

# Long-term maintainers of Mira-oxide
authors = [
    "Amanda H. Sullivan <xpa3@cdc.gov>",
    "Sam Wiley <dzw2@cdc.gov>",
    "Ben Rambo-Martin <nbx0@cdc.gov>",
]
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
    "algorithms",
]


[dependencies]
anyhow = "1.0.98"
arrow = { version = "55.2.0", default-features = false}
axum = { version = "0.8.4", features = ["multipart"] }
parquet = { version = "55.2.0", default-features = false, features = ["arrow"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
either = "1"
flate2 = "1.1.2"
glob = "0.3.2"
maud = { version = "0.27.0", features = ["axum"] }
ordered-float = "5.0.0"
plotly = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
shlex = "1.3.0"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "process", "rt-multi-thread"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
zoe = { version = "0.0.25", default-features = false, features = [
    "multiversion",
] }

[profile.release]
strip = true

[lints.clippy]
pedantic = "warn"
