[package]
name = "mutations_of_interest_table"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
either = "1"
serde = {version = "1.0.219", features = ["derive"] }

zoe = { git = "https://github.com/CDCgov/zoe.git", tag = "v0.0.18", default-features = false, features = [
    "multiversion",
] }
