[package]
name = "nf_status"
version = "0.1.0"
edition = "2024"
authors = ["Ben Rambo-Martin (nbx0@cdc.gov)"]
description = "Create an empty process status table for MIRA-NF experiment types."
license = "MIT OR Apache-2.0"

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
plotly = "0.12.1"
