[package]
name = "plots"
version = "0.1.0"
authors = ["Ben Rambo-Martin <brambomartin@cdc.gov>"]
edition = "2024"

[dependencies]
csv = "1.3.1"
glob = "0.3.2"
plotly = "0.12.1"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"